# compression-geospatial-full

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.txt  arena.h  arena_codec.cpp  bench_comp.cpp  bench_pipeline.cpp  codec.cpp  codec_collection.h  constants.h  exp.sh  recipes.sh  remappings.h  results.txt  run_benchmarks.py  run_benchmarks_16bit.py  run_benchmarks_sweep.py  run_exps.sh  run_with_perf.sh  test_comp.cpp  test_remappings.cpp  todo  transformations.h  util.h
bench/: bench_comp.cpp  bench_gdal_utils.h  bench_pipeline.cpp
code/code/: Makefile  README.md  algs.txt  gdal_program  gdal_program.c  gdal_program_compression.c  gdal_program_compression_read_flat.c  gdal_program_compression_write.c  gdal_program_grid  gdal_program_locality_compression.c  gdal_program_locality_old  gdal_program_locality_old.c  gdal_program_locality_rand_access.c  notes.md  out.txt  output.png.aux.xml  run_with_perf.sh
code/code/cpp/: Makefile  benchmark  benchmark.cc
code/code/cpp/compression/: Makefile  access_comp.cpp  access_comp_vary.cpp  access_comp_vary_change_dict.cpp  bench.cpp  bench_compression.sh  bench_experiment2.sh  bench_rand_experiment.sh  bench_rand_experiment_results.txt  bench_tiff_comp.cpp  benchexh.sh  clearslurm.sh  codec_collection.h  deflate  deflate.cpp  fastpfor_example  fastpfor_example.cpp  gen_jobs_access_comp_combo.py  gen_jobs_access_comp_vary.py  gen_jobs_access_comp_vary_fixed.py  gen_jobs_access_comp_vary_fixed_only_agg.py  lz4  lzma  lzma.cpp  maskedvbyte_example  maskedvbyte_example.cpp  modules.sh  modules.txt  new_results_bench_comp_dict.csv  new_results_bench_comp_no_dict.csv  random_access_comp.cpp  remappings.h  results_bench_comp.csv  results_bench_comp_no_dict.csv  simdcomp_mod.c  slurm_submit.peta4-cclake  stat.log.old  test_comp.cpp  test_remappings.cpp  transformations.h  (+3 more)
code/code/cpp/compression/bench_tiff_comp_results/: cascadesdeltaavx512.txt  cascadesforavx512.txt  cascadesrleavx2.txt
code/code/cpp/compression/codecs/: composite_codec.h  custom_unvec_logic_codecs.h  custom_vec_logic_codecs.h  deflate_codecs.h  direct_codec.h  fastpfor_codecs.h  frameofreference_codecs.h  generic_codecs.h  lz4_codecs.h  lzma_codecs.h  maskedvbyte_codecs.h  simdcomp_codecs.h  streamvbyte_codecs.h  turbopfor_codecs.h  zstd_codecs.h
code/code/cpp/compression/examples/: lz4.cpp
code/code/cpp/compression/rand_access_comp_experiment/: justcopy.txt
code/code/cpp/compression/rand_access_comp_experiment/reencode/: cascadesdeltaavx2.txt  justcopy.txt
code/code/cpp/compression/scripts/: bench.sh  bench_experiment.sh  bench_rand_experiment2.sh  bench_rand_experiment3.sh
code/code/hmm/: main.c  multi_cache.c.old  quadtree.c  quadtree.h  types.h
code/code/hmm2/: main.c  types.h
code/code/hmm3/: gdal_program_compression_read_flat.c
code/code/py/: check_data_loss.py  check_read_float_as_int32.py  geotiff_details.py  tiff_to_png.py
code/code/raw/: notes.md
code/code/raw/pforbench/: 2656.txt  JRC_TMF_AnnualChange_v1_1990_AFR_ID16_S10_E10.txt  accessibility.txt  slope-srtm_35_11.txt  srtm_45_15.txt
codecs/: 2ibench_codecs.h  composite_codec.h  custom_unvec_logic_codecs.h  custom_vec_logic_codecs.h  custom_vec_logic_codecs_noavx512.h  custom_vec_logic_codecs_sse.h  deflate_codecs.h  direct_codec.h  fastpfor_codecs.h  frameofreference_codecs.h  generic_codecs.h  lz4_codecs.h  lzma_codecs.h  maskedvbyte_codecs.h  simdcomp_codecs.h  streamvbyte_codecs.h  turbopfor_codecs.h  zstd_codecs.h
py/: check_data_loss.py  gen_jobs_bench_pipeline_dual.py  gen_jobs_bench_pipeline_single.py  tiff_to_png.py
scripts/: plot_bench.py  verify_sums.py
src/: bench_utils.h  remappings.h  transformations.h  util.h
src/codecs/: lzma_codecs.h  maskedvbyte_codecs.h  zstd_codecs.h
src/codecs/generic/: composite_codec.h  direct_codec.h  generic_codecs.h
src/codecs/int32/: codec_collection.h  custom_vec_logic_codecs.h  deflate_codecs.h  fastpfor_codecs.h  fastpfor_fused_codecs.h  frameofreference_codecs.h  lz4_codecs.h  lzma_codecs.h  maskedvbyte_codecs.h  simdcomp_codecs.h  simdcomp_fused_codecs.h  streamvbyte_codecs.h  turbopfor_codecs.h  zstd_codecs.h
src/codecs/uint16/: codec_collection_uint16.h  custom_vec_logic_codecs.h  direct_codec_uint16.h  fastpfor_fused_codec_uint16.h  predictive_codecs_u16.h  simdcomp_fused_codec_uint16.h
tests/: test_bench_utils.cpp  test_comp.cpp  test_int32_codecs.cpp  test_remappings.cpp  test_uint16_codecs.cpp
tiffs/geotiffs/: details
